# learn-rust-jwt-redis

./: .env  .env.example  .gitignore  Cargo.toml  README.md  api_test.http  diesel.toml  postman_collection.json  script_test.js
migrations/2025-09-24-042446-0000_create_product/: down.sql  up.sql
migrations/2025-11-01-065207-0000_create_user_contact/: up.sql
migrations/2025-11-02-065412-0000_create_payment_method/: up.sql
migrations/2026-01-28-142706-0000_create_orders/: down.sql  up.sql
migrations/2026-01-30-025740-0000_advanced_inventory/: down.sql  up.sql
payloads/: contact_create.json  contact_update.json  inventory_stock_update.json  order_create.json  product_create.json  product_update.json  user_create.json  user_update.json
src/: db.rs  main.rs  schema.rs  utils.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/models/: app_state.rs  base_model.rs  jwt.rs  login.rs  master.rs  mod.rs  transaction.rs  user.rs
src/repositories/: inventory_repo.rs  mod.rs  order_repo.rs  product_repo.rs  user_repo.rs
src/routes/: api_response.rs  hello.rs  inventory.rs  jwt_controller.rs  jwt_redis_controller.rs  login_controller.rs  mod.rs  order.rs  product.rs  user_contact.rs
