[package]
name = "learn_rust_jwt_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
redis = { version = "0.23", features = ["tokio-comp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
